--- a/MainActivity/res/layout/menu_view.xml
+++ b/MainActivity/res/layout/menu_view.xml
@@ -5,48 +5,126 @@
               android:layout_width="fill_parent" 
               android:layout_height="fill_parent" 
               android:orientation="vertical"
-              android:gravity="center"
-
-  android:id="@+id/this_is_menu" >
+              android:gravity="left"
+  				android:id="@+id/this_is_menu" >
     
-    
+ 
 
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout 
               android:layout_width="fill_parent" 
               android:layout_height="fill_parent" 
               android:orientation="vertical"
-              android:gravity="center"
-  <TableRow ></TableRow>  
-  <TableRow ></TableRow>     
+              android:gravity="left" >
+              
+         <TableRow
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content" >
+
+             <TextView
+                 android:id="@+id/example_text"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="@string/participants"
+                 android:textSize="20sp" />
+             
+        <Spinner
+            android:id="@+id/partspin"
+            android:gravity="left" />
+       
+        <TextView
+            android:id="@+id/tot_"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="20sp" />
+       
+         <TextView
+            android:id="@+id/tot_val"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="20sp" />
+        
+        
+     </TableRow> 
+    
+    
+    
   
     <TableRow >         
-    <ImageView
+
+    
+     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/bakedbrie" 
-     />
+        android:adjustViewBounds="false"
+        android:maxWidth="10dp"
+        android:src="@drawable/toast" />
+    
+     
+    
     
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/bakedbrie" 
+        android:src="@drawable/toast" 
      />
     
         <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/bakedbrie" 
+        android:src="@drawable/toast" 
      />
     </TableRow>
-  
+
+    
+    
+      <TableRow >
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" />
+      
+
+      
+      
+      
+  </TableRow>  
+    
+    
+    
+    
   <TableRow >         
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView4"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/bakedbrie" 
      />
