New build Monday.

--- a/MainActivity/res/layout/splash_view.xml
+++ b/MainActivity/res/layout/splash_view.xml
@@ -11,8 +11,11 @@
         android:id="@+id/example_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-                >
+        android:text="@string/hello_world"
+        android:padding="20dp"
+        android:gravity="left"
+         />
+        
 <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
