--- a/MainActivity/res/layout/activity_main.xml
+++ b/MainActivity/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="155dp"     
+        android:layout_marginTop="1dp"     
   		
-       layout="@layout/splash_view"  /> 
+       layout="@layout/menu_view"  /> 
     
 </RelativeLayout>
