--- a/MainActivity/res/layout/menu_view.xml
+++ b/MainActivity/res/layout/menu_view.xml
@@ -16,7 +16,8 @@
               android:layout_height="fill_parent" 
               android:orientation="vertical"
               android:gravity="left" >
-              
+             
+    
          <TableRow
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" >
@@ -26,43 +27,83 @@
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/participants"
-                 android:textSize="20sp" />
+                 android:textSize="20sp" 
+                 android:layout_weight="1"
+                 />
+    				
              
         <Spinner
             android:id="@+id/partspin"
-            android:gravity="left" />
+            android:gravity="left" 
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            />
+        
+        
        
         <TextView
             android:id="@+id/tot_"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tot"
- 			 android:textSize="20sp" />
+ 			 android:textSize="20sp" 
+ 			 android:layout_weight="2"
+ 			 />
        
          <TextView
             android:id="@+id/tot_val"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="20sp" />
+            android:text="20"
+ 			 android:textSize="20sp" 
+ 			 android:layout_weight="4"
+ 			 />
         
         
      </TableRow> 
     
     
+    <TableRow >
     
+        <TextView
+            android:id="@+id/menu_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/menu_title"
+ 			 android:textSize="20sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1" />
+    	</TableRow>
   
+     <TableRow >
+    
+        <TextView
+            android:id="@+id/submenu_title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/submenu_title1"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1" />
+    	</TableRow>
+    
+    
+    
+    
     <TableRow >         
 
     
-     <ImageView
+    <ImageView
+         	
+		android:adjustViewBounds="true"
         android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="false"
-        android:maxWidth="10dp"
-        android:src="@drawable/toast" />
-    
+         
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />	  
      
     
     
@@ -72,63 +113,352 @@
         android:id="@+id/imageView2"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/toast" 
+        
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
      />
     
         <ImageView
-         	
 		android:adjustViewBounds="true"
         android:id="@+id/imageView3"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/toast" 
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
      />
+        
+        <ImageView
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+        
     </TableRow>
 
     
     
-      <TableRow >
+      <TableRow 
+          		android:gravity="left">
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dish"
+ 			 android:textSize="15sp" 
+ 			 android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      		
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dish"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
       
       <TextView
             android:id="@+id/example_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tot"
- 			 android:textSize="15sp" />
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
       
       <TextView
             android:id="@+id/example_text2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tot"
- 			 android:textSize="15sp" />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp" />
-      
-
-      
-      
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
       
   </TableRow>  
     
+
+           <TableRow >
+    
+        <TextView
+            android:id="@+id/submenu_title2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/submenu_title2"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1" />
+    	</TableRow>
     
     
     
-  <TableRow >         
+    
+    <TableRow >         
+
+    
     <ImageView
          	
 		android:adjustViewBounds="true"
-        android:id="@+id/imageView4"
+        android:id="@+id/imageView1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/bakedbrie" 
+    
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />	  
+     
+    
+    
+    <ImageView
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
      />
+    
+        <ImageView
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+        
+        <ImageView
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+        
     </TableRow>
+
+    
+    
+      <TableRow 
+          		android:gravity="left">
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" 
+ 			 android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      		
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+  </TableRow>  
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+           <TableRow >
+    
+        <TextView
+            android:id="@+id/submenu_title3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/submenu_title3"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1" />
+    	</TableRow>
+    
+    
+    
+    
+    <TableRow >         
+
+    
+    <ImageView
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView1"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+      
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />	  
+     
+    
+    
+    <ImageView
+         	
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+         
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+    
+        <ImageView
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+        
+        <ImageView
+		android:adjustViewBounds="true"
+        android:id="@+id/imageView3"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/toast"
+        android:padding="3dp" 
+        android:layout_weight="1"
+     />
+        
+    </TableRow>
+
+    
+    
+      <TableRow 
+          		android:gravity="left">
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" 
+ 			 android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      		
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp" 
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+      <TextView
+            android:id="@+id/example_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tot"
+ 			 android:textSize="15sp"
+ 			  android:padding="3dp"  
+       		 android:layout_weight="1"
+       		 android:gravity="center"
+       		  />
+      
+  </TableRow>  
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
+      
     
 </TableLayout>
 
