Commented out the stuff that I couldn't make work.

--- a/MainActivity/res/layout/menu_view.xml
+++ b/MainActivity/res/layout/menu_view.xml
@@ -90,7 +90,8 @@
     
     
     
-    <TableRow >         
+    <TableRow
+        android:id="@+id/submenu_title1_picture_row" >         
 
     
     <ImageView
