--- a/MainActivity/res/layout/menu_view.xml
+++ b/MainActivity/res/layout/menu_view.xml
@@ -1,466 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent" 
-              android:layout_height="fill_parent" 
-              android:orientation="vertical"
-              android:gravity="left"
-  				android:id="@+id/this_is_menu" >
-    
- 
+    android:id="@+id/menu_view"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="1"
+    android:gravity="left"
+    android:orientation="vertical" >
 
+    <LinearLayout
+        android:id="@+id/menu_top"
+        android:layout_width="fill_parent"
+        android:layout_height="55dp"
+        android:layout_weight="1"
+        android:gravity="left"
+        android:orientation="horizontal" >
 
-<TableLayout 
-              android:layout_width="fill_parent" 
-              android:layout_height="fill_parent" 
-              android:orientation="vertical"
-              android:gravity="left" >
-             
-    
-         <TableRow
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/participants"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/participants"
+            android:textSize="@dimen/MediumText" />
 
-             <TextView
-                 android:id="@+id/example_text"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="@string/participants"
-                 android:textSize="20sp" 
-                 android:layout_weight="1"
-                 />
-    				
-             
         <Spinner
             android:id="@+id/partspin"
-            android:gravity="left" 
+            android:layout_width="96dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
-            />
-        
-        
-       
+            android:clipChildren="false"
+            android:gravity="left" />
+
         <TextView
             android:id="@+id/tot_"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tot"
- 			 android:textSize="20sp" 
- 			 android:layout_weight="2"
- 			 />
-       
-         <TextView
+            android:textColor="@color/white"
+            android:textSize="@dimen/MediumText" />
+
+        <TextView
             android:id="@+id/tot_val"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="20"
- 			 android:textSize="20sp" 
- 			 android:layout_weight="4"
- 			 />
-        
-        
-     </TableRow> 
-    
-    
-    <TableRow >
-    
+            android:text="0"
+            android:textSize="@dimen/MediumText" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/menu_view_title_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
         <TextView
-            android:id="@+id/menu_title"
-            android:layout_width="wrap_content"
+            android:id="@+id/menu_title_text"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/menu_title"
             android:text="@string/menu_title"
- 			 android:textSize="20sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1" />
-    	</TableRow>
-  
-     <TableRow >
-    
+            android:textSize="@dimen/LargeText" >
+        </TextView>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" />
+
+        <!-- Nothing will be added to this view -->
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/menu_view_starter_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical" >
+
         <TextView
-            android:id="@+id/submenu_title1"
-            android:layout_width="wrap_content"
+            android:id="@+id/menu_view_starter_text"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint=""
             android:text="@string/submenu_title1"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1" />
-    	</TableRow>
-    
-    
-    
-    
-    <TableRow
-        android:id="@+id/submenu_title1_picture_row" >         
+            android:textSize="@dimen/MediumText" >
+        </TextView>
+        <!-- XML Dish objects of Starters added programatically here -->
+    </LinearLayout>
 
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true" 
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:id="@+id/menu_view_mainCourse_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         
-        android:src="@drawable/toast"
-        android:padding="3dp" 
         android:layout_weight="1"
-     />	  
-     
-    
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-    
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-    </TableRow>
+        android:orientation="vertical" >
 
-    
-    
-      <TableRow 
-          		android:gravity="left">
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dish"
- 			 android:textSize="15sp" 
- 			 android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      		
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/dish"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-  </TableRow>  
-    
-
-           <TableRow >
-    
         <TextView
-            android:id="@+id/submenu_title2"
-            android:layout_width="wrap_content"
+            android:id="@+id/menu_view_MainCourse_text"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/menu_title"
             android:text="@string/submenu_title2"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1" />
-    	</TableRow>
-    
-    
-    
-    
-    <TableRow >         
+            android:textSize="@dimen/MediumText" >
+        </TextView>
+        <!-- XML Dish objects of Main Courses added programatically here -->
+    </LinearLayout>
 
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:id="@+id/menu_view_desert_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-    
-        android:src="@drawable/toast"
-        android:padding="3dp" 
         android:layout_weight="1"
-     />	  
-     
-    
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-    
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-    </TableRow>
+        android:orientation="vertical" >
 
-    
-    
-      <TableRow 
-          		android:gravity="left">
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp" 
- 			 android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      		
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-  </TableRow>  
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-           <TableRow >
-    
         <TextView
-            android:id="@+id/submenu_title3"
-            android:layout_width="wrap_content"
+            android:id="@+id/menu_view_desert_text"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/menu_title"
             android:text="@string/submenu_title3"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1" />
-    	</TableRow>
-    
-    
-    
-    
-    <TableRow >         
+            android:textSize="@dimen/MediumText" >
+        </TextView>
+        <!-- XML Dish objects of Deserts added programatically here -->
+    </LinearLayout>
 
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView1"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:id="@+id/menu_view_button_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-      
-        android:src="@drawable/toast"
-        android:padding="3dp" 
         android:layout_weight="1"
-     />	  
-     
-    
-    
-    <ImageView
-         	
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-         
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-    
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-        <ImageView
-		android:adjustViewBounds="true"
-        android:id="@+id/imageView3"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/toast"
-        android:padding="3dp" 
-        android:layout_weight="1"
-     />
-        
-    </TableRow>
+        android:gravity="center"
+        android:orientation="horizontal" >
 
-    
-    
-      <TableRow 
-          		android:gravity="left">
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/createMenuButton"
+            android:layout_width="108dp"
             android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp" 
- 			 android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      		
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp" 
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-      <TextView
-            android:id="@+id/example_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tot"
- 			 android:textSize="15sp"
- 			  android:padding="3dp"  
-       		 android:layout_weight="1"
-       		 android:gravity="center"
-       		  />
-      
-  </TableRow>  
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-      
-    
-</TableLayout>
+            android:background="@color/red"
+            android:padding="@dimen/SmallText"
+            android:text="@string/create"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/MediumText" />
+
+        <!-- Nothing will be added to this view -->
+
+    </LinearLayout>
 
 </LinearLayout>
