--- a/MainActivity/res/layout/splash_view.xml
+++ b/MainActivity/res/layout/splash_view.xml
@@ -1,30 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent" 
-              android:layout_height="fill_parent" 
-              android:orientation="vertical"
-               android:gravity="center"
-               
-                android:id="@+id/this_is_splash" >
+    android:id="@+id/this_is_splash"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:gravity="center"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/example_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        android:padding="20dp"
         android:gravity="left"
-         />
-        
-<Button
-       android:id="@+id/startbutton"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:background="@color/red"
-       android:textColor="@color/white"
-       android:text="@string/start" 
-       
-       android:gravity="center"
-       />
-     
+        android:padding="20dp"
+        android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/startbutton"
+        android:layout_width="202dp"
+        android:layout_height="wrap_content"
+        android:background="@color/red"
+        android:gravity="center"
+        android:text="@string/start"
+        android:textColor="@color/white" />
+
 </LinearLayout>
