--- a/MainActivity/res/values/dimens.xml
+++ b/MainActivity/res/values/dimens.xml
@@ -3,5 +3,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    <dimen name="LargeText">25dp</dimen>
+    <dimen name="MediumText">20dp</dimen>
+    <dimen name="SmallText">15dp</dimen>
 
 </resources>
