--- a/MainActivity/res/layout/splash_view.xml
+++ b/MainActivity/res/layout/splash_view.xml
@@ -7,20 +7,30 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/example_text"
+        android:id="@+id/welcome_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.01"
         android:gravity="left"
         android:padding="20dp"
-        android:text="@string/hello_world" />
+        android:text="@string/welcomeMessage" />
 
-    <Button
-        android:id="@+id/startbutton"
-        android:layout_width="202dp"
+    <LinearLayout
+        android:id="@+id/menu_view_button_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/red"
+        android:layout_weight="0.01"
         android:gravity="center"
-        android:text="@string/start"
-        android:textColor="@color/white" />
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/startbutton"
+            android:layout_width="202dp"
+            android:layout_height="wrap_content"
+            android:background="@color/red"
+            android:gravity="center"
+            android:text="@string/start"
+            android:textColor="@color/white" />
+    </LinearLayout>
 
 </LinearLayout>
